SCRUM-17: profile save updates DB and redirects to menu with success banner

--- a/frontend/src/app/menu/menu.html
+++ b/frontend/src/app/menu/menu.html
@@ -1,4 +1,9 @@
 <div class="menu-page">
+  @if (successMessage()) {
+    <div class="success-banner">
+      {{ successMessage() }}
+    </div>
+  }
   <h2>Our Menu</h2>
   <p class="subtitle">Browse our selection of crust types</p>
 
